--- a/.c9/project.settings
+++ b/.c9/project.settings
@@ -4,7 +4,8 @@
         "configs": {
             "json()": {},
             "@inited": "true"
-        }
+        },
+        "@runner": "Apache httpd (PHP, HTML)"
     },
     "share": {
         "@preview": false,
